Update Roave security advisory dependency
Roave security advisory package has been added to the dev dependencies in the composer.json. This package is vital for preventing the installation of composer packages with known security vulnerabilities.

Namespace for the Laravel filament plugin has also been corrected across files. Hyphen was mistakenly used in namespaces which contradicts PHP's naming convention and can cause autoloading issues. The term "Hanzo-alpha" has been replaced with "HanzoAlpha".

--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "illuminate/contracts": "^9.0"
     },
     "require-dev": {
+        "roave/security-advisories": "dev-latest",
         "laravel/pint": "^1.0",
         "nunomaduro/collision": "^6.0",
         "orchestra/testbench": "^7.0",
@@ -34,13 +35,13 @@
     },
     "autoload": {
         "psr-4": {
-            "Hanzo-alpha\\FilamentVerification\\": "src",
-            "Hanzo-alpha\\FilamentVerification\\Database\\Factories\\": "database/factories"
+            "HanzoAlpha\\FilamentVerification\\": "src",
+            "HanzoAlpha\\FilamentVerification\\Database\\Factories\\": "database/factories"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "Hanzo-alpha\\FilamentVerification\\Tests\\": "tests"
+            "HanzoAlpha\\FilamentVerification\\Tests\\": "tests"
         }
     },
     "scripts": {
@@ -62,10 +63,10 @@
     "extra": {
         "laravel": {
             "providers": [
-                "Hanzo-alpha\\FilamentVerification\\FilamentVerificationServiceProvider"
+                "HanzoAlpha\\FilamentVerification\\FilamentVerificationServiceProvider"
             ],
             "aliases": {
-                "FilamentVerification": "Hanzo-alpha\\FilamentVerification\\Facades\\FilamentVerification"
+                "FilamentVerification": "HanzoAlpha\\FilamentVerification\\Facades\\FilamentVerification"
             }
         }
     },
